--- a/config.template.json
+++ b/config.template.json
@@ -34,6 +34,14 @@
                     "max_ul_speed": 00
                 }
             ]
-        }
+        },
+
+        "services": [
+            {
+                "name": "",
+                "hostname": "",
+                "port": ""
+            }
+        ]
     }
 }
