Adding a module to get storage capacity from the freenas API

--- a/config.template.json
+++ b/config.template.json
@@ -42,6 +42,12 @@
                 "hostname": "",
                 "port": ""
             }
-        ]
+        ],
+
+        "freenas": {
+            "hostname": "freenas.example.com",
+            "username": "root",
+            "password": "password"
+        }
     }
 }
